<resources>
    <string name="app_name">Ders</string>
    <string name="soru_ekle">Soru ekle</string>
    <string name="soru_listesi">Soru Listesi</string>
    <string name="soru">Eklemek istediğiniz soruyu yazınız :</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="soruolusturbutonu">Soruyu oluştur</string>
    <string name="soruguncellebutonu">Soruyu güncelle</string>
    <string name="soruopsiyonbilgilendirme">Soruda bulunacak cevapları tanımlayınız.</string>
    <string name="dogrucevapbilgilendirme">Doğru cevabı tanımlayınız.</string>
    <string name="aCevabi">A şıkkı için bir cevap belirleyiniz:</string>
    <string name="bCevabi">B şıkkı için bir cevap belirleyiniz:</string>
    <string name="cCevabi">C şıkkı için bir cevap belirleyiniz:</string>
    <string name="dCevabi">D şıkkı için bir cevap belirleyiniz:</string>
    <string name="soruZorlukBilgilendirme">Soru için bir zorluk seviyesi tanımlayınız.</string>
    <string name="birSeviye">Zorluk:1</string>
    <string name="ikiSeviye">Zorluk:2</string>
    <string name="ucSeviye">Zorluk:3</string>
    <string name="dortSeviye">Zorluk:4</string>
    <string name="besSeviye">Zorluk:5</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="soruOpsiyonGuncellemeBilgilendirme">Güncellenecek sorunun cevaplarını tanımlayınız.</string>
    <string name="title_activity_oku_ve_gonder">OkuVeGonderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>