<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SoruOlusturActivity">


 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">



         <EditText
             android:id="@+id/soruText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/soru"
             android:inputType="textMultiLine"
             android:maxLength="120"
             android:textSize="18sp"></EditText>


         <TextView
             android:id="@+id/opsiyon_bilgilendirme"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/soruopsiyonbilgilendirme"
             android:textAlignment="center"
             android:textStyle="bold"></TextView>

         <EditText
             android:id="@+id/secenekTextBir"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:hint="@string/aCevabi"
             android:maxLength="60"></EditText>

         <EditText
             android:id="@+id/secenekTextIki"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:hint="@string/bCevabi"
             android:maxLength="60"></EditText>

         <EditText
             android:id="@+id/secenekTextUc"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:hint="@string/cCevabi"
             android:maxLength="60"></EditText>

         <EditText
             android:id="@+id/secenekTextDort"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:hint="@string/dCevabi"
             android:maxLength="60"></EditText>

         <TextView
             android:id="@+id/dogru_cevap_bilgilendirme"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/dogrucevapbilgilendirme"
             android:textAlignment="center"
             android:textStyle="bold"></TextView>

         <RadioGroup
             android:id="@+id/dogruCevapAlani"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">

             <RadioButton
                 android:id="@+id/aButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/a"
                 android:onClick="sec"
                 ></RadioButton>

             <RadioButton
                 android:id="@+id/bButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/b"
                 android:onClick="sec"
                 ></RadioButton>

             <RadioButton
                 android:id="@+id/cButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/c"
                 android:onClick="sec"
                 ></RadioButton>

             <RadioButton
                 android:id="@+id/dButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/d"
                 android:onClick="sec"
                 ></RadioButton>

         </RadioGroup>

         <TextView
             android:id="@+id/soru_zorluk_bilgilendirme"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/soruZorlukBilgilendirme"
             android:textAlignment="center"
             android:textStyle="bold"></TextView>

         <RadioGroup
             android:id="@+id/soruZorlukAlani"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">

             <RadioButton
                 android:id="@+id/birButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/birSeviye"
                 android:onClick="zorlukSec"
                 ></RadioButton>

             <RadioButton
                 android:id="@+id/ikiButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/ikiSeviye"
                 android:onClick="zorlukSec"
                 ></RadioButton>

             <RadioButton
                 android:id="@+id/ucButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/ucSeviye"
                 android:onClick="zorlukSec"
                 ></RadioButton>

             <RadioButton
                 android:id="@+id/dortButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/dortSeviye"
                 android:onClick="zorlukSec"
                 ></RadioButton>

             <RadioButton
                 android:id="@+id/besButonu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/besSeviye"
                 android:onClick="zorlukSec"
                 ></RadioButton>


         </RadioGroup>

         <Button
             android:id="@+id/soru_olustur_butonu"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="soruYap"
             android:text="@string/soruolusturbutonu">

         </Button>





     </LinearLayout>

 </ScrollView>


</LinearLayout>